# vton-prime-engine-vpe

./: .gitignore  README.md  SUBMISSION.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  COMPLETION_CHECKLIST.md  COST_ESTIMATION.md  DATASET_TRAINING.md  DEPLOYMENT_MONITORING.md  EVALUATION.md  GAP_ANALYSIS.md  LEGAL_IP_STRATEGY.md  LITERATURE_REVIEW.md  MLOPS_INFRASTRUCTURE.md  PROJECT_PLAN.md  RISKS.md  ROADMAP.md  TEAM_ORGANIZATION.md
src/vpe/: __init__.py  cli.py  config.py  engines.py  evaluation.py  pipeline.py  preprocessing.py  schemas.py
tests/: test_pipeline.py
