[project]
name = "vton-prime-engine"
version = "0.1.0"
description = "Virtual try-on project plan and starter pipeline scaffold"
requires-python = ">=3.9"

[project.optional-dependencies]
ml = [
    "torch>=2.1",
    "torchvision>=0.16",
    "diffusers>=0.25",
    "transformers>=4.36",
    "accelerate>=0.25",
    "peft>=0.7",
    "safetensors>=0.4",
]
serving = [
    "fastapi>=0.108",
    "uvicorn>=0.25",
    "pillow>=10.0",
    "boto3>=1.34",
]
eval = [
    "wandb>=0.16",
    "scikit-image>=0.22",
    "lpips>=0.1",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "mypy>=1.8",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

